2011-03-05  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_tcptraffic: corrected a bug in the handling of counter
	overflows

2011-02-17  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_tcptraffic: added a debug log

2011-02-10  Matteo Corti  <matteo.corti@id.ethz.ch>

	* nagiosgrapher: added the nagiorgrapher template (thanks to Marcus Schopen)

2010-11-03  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_tcptraffic: fixed a minor bug which caused on error while
                            displaying an error message
	* check_tcptraffic: fixed copyright and licensing information

2010-10-21  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_tcptraffic: --critical and --warning now accept ranges (low:high)

2010-04-30  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_tcptraffic: --debug option

2010-01-30  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_tcptraffic: removed double -r command line option
	* check_tcptraffic: several RPM spec file fixes (builds on 64 bit systems, build ad non root, ...)

2009-09-25  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_tcptraffic: system check (must be Linux)
	* check_tcptraffic  max check time larger computed for 32 or 64 bits
	* check_tcptraffic: Nagios::Plugin::Getopt

2008-03-21  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_tcptraffic: ePN compatibility (POD in a separate file)

2007-12-07  root  <matteo.corti@id.ethz.ch>

	* check_tcptraffic: single char command line options
	* check_tcptraffic: fixed a problem on kernels that align values in the proc file

2007-11-30  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_tcptraffic: uname added to the tmp file name
	* check_tcptraffic: uses Nagios::Plugin
	* check_tcptraffic: cleanup with perlcritic
	* check_tcptraffic: should be OK with ePN

2007-04-03  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_traffic: if the time difference is too big wait and recompute

2007-02-23  Matteo Corti  <matteo.corti@id.ethz.ch>
